add mobile version

--- a/MathСalculator.WebUI/Views/Methods/Gaus.cshtml
+++ b/MathСalculator.WebUI/Views/Methods/Gaus.cshtml
@@ -106,7 +106,7 @@ x_{j_1}+\widehat{\alpha}_{1j_2}x_{j_2}+\ldots+\widehat{\alpha}_{1j_r}x_{j_r}&amp
 
                 </div>
                 <div class="modal-footer">
-                    <button type="submit" class="btn btn-primary">Решить</button>
+                    <button type="submit" class="btn btn-default">Решить</button>
                     <button type="button" class="btn btn-primary" data-dismiss="modal">Закрыть</button>
                 </div>
             }
