--- a/MathСalculator.WebUI/Views/Shared/_LayoutMobile.cshtml
+++ b/MathСalculator.WebUI/Views/Shared/_LayoutMobile.cshtml
@@ -4,10 +4,15 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <meta name="viewport" content="width=device-width" />
-    <script src="~/Scripts/jquery-1.10.2.js"></script>
-    <script src="~/Scripts/bootstrap.js"></script>
     <link href="~/Content/bootstrap.css" rel="stylesheet" />
-    <link href="~/Content/bootstrap-theme.css" rel="stylesheet" />
+    <script src="~/Scripts/jquery-1.10.2.min.js"></script>
+    <script src="~/Scripts/bootstrap.min.js"></script>
+    <script src="~/Scripts/jquery.validate.min.js"></script>
+    <script src="~/Scripts/simIter.js"></script>
+    <link href="~/Content/simIter.css" rel="stylesheet" />
+    <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+
+    <link href="~/Content/bootstrap-theme.min.css" rel="stylesheet" />
     <link href="~/Content/offcanvas.css" rel="stylesheet" />
     <script src="~/Scripts/npm.js"></script>
     <script src="~/Scripts/ie-emulation-modes-warning.js"></script>
@@ -25,77 +30,92 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="@Url.Action("Index", "Methods")">MathСalculator</a>
+               
+                    <a class="navbar-brand" href="@Url.Action("Index", "Methods")">MathСalculator</a>
+                @if (User.Identity.IsAuthenticated)
+                {
+                    <a class="navbar-brand" href="#"><b>@User.Identity.Name</b></a>
+                   
+                }
             </div>
             <div id="navbar" class="collapse navbar-collapse">
-                <ul class="nav navbar-nav">
-                    <li><a href="@Url.Action("Index", "Methods")">Главная</a></li>
+                <center>
+                    <ul class="nav navbar-nav">
+                        @if (!User.Identity.IsAuthenticated)
+                        {
+                            <a href="@Url.Action("Login", "Users")" class="btn btn-primary " role="button">Войти</a>
+                            <a href="@Url.Action("Register", "Users")" class="btn btn-primary " role="button">Регистрация</a>
+                        }
+                        else
+                        {
+                            <a href="@Url.Action("Login", "Users")" class="btn btn-primary " role="button">Изменить пароль</a>
+                            <a href="@Url.Action("Logout", "Users")" class="btn btn-primary " role="button">Выйти</a>
+                        }
+                        <li class="dropdown dropdown-large">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown"> Методы<b class="caret"></b></a>
 
-                    <li class="dropdown dropdown-large">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown"> Методы<b class="caret"></b></a>
+                            <ul class="dropdown-menu dropdown-menu-large row">
+                                <li class="col-sm-3">
+                                    <ul>
+                                        <li class="dropdown-header">Методы решения СЛАУ</li>
+                                        <li><a href="@Url.Action("Gaus", "Methods")">Метод Гаусса</a></li>
+                                        <li><a href="#">LU - разложение</a></li>
+                                        <li><a href="#">Метод квадратного корня</a></li>
+                                        <li class="divider"></li>
+                                        <li class="dropdown-header">Итерационные методы</li>
+                                        <li><a href="@Url.Action("SimpleIteration", "Methods")">Метод простой итерации</a></li>
+                                        <li><a href="@Url.Action("Chord", "Methods")">Метод хорд</a></li>
+                                        <li><a href="@Url.Action("Newton", "Methods")">Метод Ньютона</a></li>
+                                        <li><a href="@Url.Action("Secants", "Methods")">Метод секущих</a></li>
 
-                        <ul class="dropdown-menu dropdown-menu-large row">
-                            <li class="col-sm-3">
-                                <ul>
-                                    <li class="dropdown-header">Методы решения СЛАУ</li>
-                                    <li><a href="@Url.Action("Gaus", "Methods")">Метод Гаусса</a></li>
-                                    <li><a href="#">LU - разложение</a></li>
-                                    <li><a href="#">Метод квадратного корня</a></li>
-                                    <li class="divider"></li>
-                                    <li class="dropdown-header">Итерационные методы</li>
-                                    <li><a href="@Url.Action("SimpleIteration", "Methods")">Метод простой итерации</a></li>
-                                    <li><a href="@Url.Action("Chord", "Methods")">Метод хорд</a></li>
-                                    <li><a href="@Url.Action("Newton", "Methods")">Метод Ньютона</a></li>
-                                    <li><a href="@Url.Action("Secants", "Methods")">Метод секущих</a></li>
+                                    </ul>
+                                </li>
+                                <li class="col-sm-3">
+                                    <ul>
+                                        <li class="dropdown-header">Численное интегрирование</li>
+                                        <li><a href="@Url.Action("MathCalc", "Methods")">Метод прямоугольников</a></li>
+                                        <li><a href="#">Метод трапеций</a></li>
+                                        <li><a href="#">Метод парабол (метод Симпсона)</a></li>
+                                        <li><a href="#">Метод 3/8</a></li>
 
-                                </ul>
-                            </li>
-                            <li class="col-sm-3">
-                                <ul>
-                                    <li class="dropdown-header">Численное интегрирование</li>
-                                    <li><a href="@Url.Action("MathCalc", "Methods")">Метод прямоугольников</a></li>
-                                    <li><a href="#">Метод трапеций</a></li>
-                                    <li><a href="#">Метод парабол (метод Симпсона)</a></li>
-                                    <li><a href="#">Метод 3/8</a></li>
+                                        <li class="divider"></li>
+                                        <li class="dropdown-header">Онлайн сервисы</li>
+                                        <li><a href="@Url.Action("MathCalc", "Methods")">Калькулятор</a></li>
+                                    </ul>
+                                </li>
+                                <li class="col-sm-3">
+                                    <ul>
+                                        <li class="dropdown-header">Input groups</li>
+                                        <li><a href="#">Basic example</a></li>
+                                        <li><a href="#">Sizing</a></li>
+                                        <li><a href="#">Checkboxes and radio addons</a></li>
+                                        <li class="divider"></li>
+                                        <li class="dropdown-header">Navs</li>
+                                        <li><a href="#">Tabs</a></li>
+                                        <li><a href="#">Pills</a></li>
+                                        <li><a href="#">Justified</a></li>
+                                    </ul>
+                                </li>
+                                <li class="col-sm-3">
+                                    <ul>
+                                        <li class="dropdown-header">Navbar</li>
+                                        <li><a href="#">Default navbar</a></li>
+                                        <li><a href="#">Buttons</a></li>
+                                        <li><a href="#">Text</a></li>
+                                        <li><a href="#">Non-nav links</a></li>
+                                        <li><a href="#">Component alignment</a></li>
+                                        <li><a href="#">Fixed to top</a></li>
+                                        <li><a href="#">Fixed to bottom</a></li>
+                                        <li><a href="#">Static top</a></li>
+                                        <li><a href="#">Inverted navbar</a></li>
+                                    </ul>
+                                </li>
+                            </ul>
 
-                                    <li class="divider"></li>
-                                    <li class="dropdown-header">Онлайн сервисы</li>
-                                    <li><a href="@Url.Action("MathCalc", "Methods")">Калькулятор</a></li>
-                                </ul>
-                            </li>
-                            <li class="col-sm-3">
-                                <ul>
-                                    <li class="dropdown-header">Input groups</li>
-                                    <li><a href="#">Basic example</a></li>
-                                    <li><a href="#">Sizing</a></li>
-                                    <li><a href="#">Checkboxes and radio addons</a></li>
-                                    <li class="divider"></li>
-                                    <li class="dropdown-header">Navs</li>
-                                    <li><a href="#">Tabs</a></li>
-                                    <li><a href="#">Pills</a></li>
-                                    <li><a href="#">Justified</a></li>
-                                </ul>
-                            </li>
-                            <li class="col-sm-3">
-                                <ul>
-                                    <li class="dropdown-header">Navbar</li>
-                                    <li><a href="#">Default navbar</a></li>
-                                    <li><a href="#">Buttons</a></li>
-                                    <li><a href="#">Text</a></li>
-                                    <li><a href="#">Non-nav links</a></li>
-                                    <li><a href="#">Component alignment</a></li>
-                                    <li><a href="#">Fixed to top</a></li>
-                                    <li><a href="#">Fixed to bottom</a></li>
-                                    <li><a href="#">Static top</a></li>
-                                    <li><a href="#">Inverted navbar</a></li>
-                                </ul>
-                            </li>
-                        </ul>
+                        </li>
 
-                    </li>
-                </ul>
-
-      
+                    </ul>
+                </center>
             </div><!-- /.nav-collapse -->
 
         </div><!-- /.container -->
@@ -114,8 +134,6 @@
 </body>
 </html>
 <script>
-    $(".collapse").collapse()
-
-    $('#collapseExample').collapse()
+    $(".collapse").collapse('hide');
 
 </script>
