fix bugs and ubdate

--- a/MathСalculator.WebUI/Views/Shared/_LayoutMobile.cshtml
+++ b/MathСalculator.WebUI/Views/Shared/_LayoutMobile.cshtml
@@ -135,5 +135,6 @@
 </html>
 <script>
     $(".collapse").collapse('hide');
-
+    if ($(document).height() <= $(window).height())
+        $("footer.footer").addClass("navbar-fixed-bottom");
 </script>
