--- a/MathСalculator.WebUI/Views/Users/Login.Mobile.cshtml
+++ b/MathСalculator.WebUI/Views/Users/Login.Mobile.cshtml
@@ -47,7 +47,7 @@
       </div>
 }
             </div>
-            <a href="#" class="text-center new-account">Создать новый аккаунт </a>
+            <a href="@Url.Action("Register", "Users")" class="text-center new-account">Создать новый аккаунт </a>
         </div>
     </div>
 </div>
