--- a/MathСalculator.WebUI/Views/Methods/Index.Mobile.cshtml
+++ b/MathСalculator.WebUI/Views/Methods/Index.Mobile.cshtml
@@ -7,8 +7,9 @@
 
 
 <div class="jumbotron">
-    <h1>Добро пожаловать</h1>
-    <p class="lead">Вы находитесь на мабильной версии приложения,некоторые функции будут недоступны</p>
+    <center><h1>Добро пожаловать</h1></center>
+
+    @*<p class="lead">Вы находитесь на мабильной версии приложения,некоторые функции будут недоступны</p>*@
 </div>
 
 <!-- Example row of columns -->
@@ -30,3 +31,15 @@
         <p><a href="@Url.Action("Newton", "Methods")" class="btn btn-primary" role="button">Подробнее &raquo;</a></p>
     </div><!--/.col-xs-6.col-lg-4-->
 </div>
+
+
+
+
+<style>
+    div.jumbotron {
+        width:100%;
+        height:100%;
+        background-image: url(http://hq-wallpapers.ru/wallpapers/3/hq-wallpapers_ru_funny_13844_1920x1200.jpg);
+        background-size: 100%;/* Современные браузеры */
+    }
+</style>
