--- a/MathСalculator.WebUI/Views/Users/Login.cshtml
+++ b/MathСalculator.WebUI/Views/Users/Login.cshtml
@@ -3,10 +3,10 @@
     ViewBag.Title = "Login";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
+<link href="~/Content/offcanvas.css" rel="stylesheet" />
 @{Html.EnableClientValidation();}
 @{Html.EnableUnobtrusiveJavaScript();}
-
+<link href="~/Content/StyleSheet1.css" rel="stylesheet" />
 <div class="container">
     <div class="row">
         <div class="col-sm-6 col-md-4 col-md-offset-4">
@@ -24,14 +24,14 @@
    
          <div class="">
              @Html.TextBoxFor(m => m.Login, new { @class = "form-control", @placeholder = "Login" })
-            <p class="help-block">@Html.ValidationMessageFor(m => m.Login)</p>
+             <p class="text-danger">@Html.ValidationMessageFor(m => m.Login)</p>
          </div>
       </div>
     
     <div class="form-group">
          <div class="">
              @Html.PasswordFor(m => m.Password, new { @class = "form-control", @placeholder = "Password" })
-             <p class="help-block">@Html.ValidationMessageFor(m => m.Password)</p>
+             <p class="text-danger">@Html.ValidationMessageFor(m => m.Password)</p>
          </div>
       </div>
 
@@ -47,7 +47,7 @@
       </div>
 }
             </div>
-            <a href="#" class="text-center new-account">Создать новый аккаунт </a>
+            <a href="@Url.Action("Register", "Users")" class="text-center new-account">Создать новый аккаунт </a>
         </div>
     </div>
 </div>
@@ -74,3 +74,14 @@
 
     });
 </script>
+
+<style>
+    body {
+        background: url(http://www.vegaport.com.ua/files/imagecache/main-big/17/robots11.jpg);
+        /*/*-moz-background-size: 100%; /* Firefox 3.6+ */
+        /*-webkit-background-size: 100%;*/ /* Safari 3.1+ и Chrome 4.0+ */
+        /*-o-background-size: 100%;*/ /* Opera 9.6+ */
+        background-size: 100%;/* Современные браузеры */
+
+    }
+</style>
