--- a/MathСalculator.WebUI/Views/Users/Register.Mobile.cshtml
+++ b/MathСalculator.WebUI/Views/Users/Register.Mobile.cshtml
@@ -2,7 +2,7 @@
 
 @{
     
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_LayoutMobile.cshtml";
 }
 
 
@@ -85,14 +85,4 @@
     </div>
 
 
-<style>    body {
-      
-        background-image: url('../../Content/fon1.jpg');
-        -moz-background-size: 100%; /* Firefox 3.6+ */
-        -webkit-background-size: 100%; /* Safari 3.1+ и Chrome 4.0+ */
-        -o-background-size: 100%; /* Opera 9.6+ */
-        background-size: 100%; /* Современные браузеры */
-    }</style>
-
 <script src="~/Scripts/imageScript.js"></script>
-
