--- a/MathСalculator.WebUI/Views/Methods/Gaus.cshtml
+++ b/MathСalculator.WebUI/Views/Methods/Gaus.cshtml
@@ -1,6 +1,6 @@
 ﻿@model MathСalculator.WebUI.Models.GausModel
 @{
-    ViewBag.Title = "Gaus";
+    ViewBag.Title = "Метод Гаусса";
     Layout = "~/Views/Shared/_Layout.cshtml";
 
 }
