--- a/MathСalculator.WebUI/Views/Methods/Secants.Mobile.cshtml
+++ b/MathСalculator.WebUI/Views/Methods/Secants.Mobile.cshtml
@@ -1,6 +1,6 @@
 ﻿@model MathСalculator.WebUI.Models.ChordModel
 @{
-    ViewBag.Title = "Secants";
+    ViewBag.Title = "Метод секущих";
     Layout = "~/Views/Shared/_LayoutMobile.cshtml";
 }
 
