--- a/MathСalculator.WebUI/Views/Methods/Secants.cshtml
+++ b/MathСalculator.WebUI/Views/Methods/Secants.cshtml
@@ -1,6 +1,6 @@
 ﻿@model MathСalculator.WebUI.Models.ChordModel
 @{
-    ViewBag.Title = "Secants";
+    ViewBag.Title = "Метод секущих";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -147,7 +147,7 @@
                 <br />
                 @Html.Label("Введите eps")
                 <br />
-                @Html.TextBoxFor(x => x.Epsilon, new { Value = 0.000001 })
+                @Html.TextBoxFor(x => x.Epsilon)
                 <br />
                 @Html.Label("Введите начальное приближение х0")
                 <br />
