--- a/MathСalculator.WebUI/Views/Methods/SimpleIteration.Mobile.cshtml
+++ b/MathСalculator.WebUI/Views/Methods/SimpleIteration.Mobile.cshtml
@@ -1,6 +1,6 @@
 ﻿@model MathСalculator.WebUI.Models.SimpleIterationModel
 @{
-    ViewBag.Title = "SimpleIteration";
+    ViewBag.Title = "Метод простой итерации";
     Layout = "~/Views/Shared/_LayoutMobile.cshtml";
 }
 
@@ -165,7 +165,7 @@
     <br />
     sqrt, sin, cos, tan, atan, acos, asin, acotan, exp, ln, log, sinh, cosh, tanh, abs, ceil, floor, fac, sfac, round, fpart
     <br />
-    !, ==, !=, ||, &&, >, < , >=, <=
+    !, ==, !=, ||, &&, >, < 
     <br />
    Константы
     <br />
