--- a/MathСalculator.WebUI/Views/Users/Login.Mobile.cshtml
+++ b/MathСalculator.WebUI/Views/Users/Login.Mobile.cshtml
@@ -1,6 +1,6 @@
 ﻿@model MathСalculator.WebUI.Models.UsersLogin
 @{
-    ViewBag.Title = "Login";
+    ViewBag.Title = "Войти";
     Layout = "~/Views/Shared/_LayoutMobile.cshtml";
 }
 
