--- a/MathСalculator.WebUI/Views/Users/Login.cshtml
+++ b/MathСalculator.WebUI/Views/Users/Login.cshtml
@@ -1,6 +1,6 @@
 ﻿@model MathСalculator.WebUI.Models.UsersLogin
 @{
-    ViewBag.Title = "Login";
+    ViewBag.Title = "Войти";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <link href="~/Content/offcanvas.css" rel="stylesheet" />
@@ -77,11 +77,11 @@
 
 <style>
     body {
-        background: url(http://www.vegaport.com.ua/files/imagecache/main-big/17/robots11.jpg);
+       
+        background-image: url('../../Content/robots11.jpg');
         /*/*-moz-background-size: 100%; /* Firefox 3.6+ */
         /*-webkit-background-size: 100%;*/ /* Safari 3.1+ и Chrome 4.0+ */
         /*-o-background-size: 100%;*/ /* Opera 9.6+ */
-        background-size: 100%;/* Современные браузеры */
-
+        background-size: 100%; /* Современные браузеры */
     }
 </style>
