--- a/MathСalculator.WebUI/Views/Users/Register.Mobile.cshtml
+++ b/MathСalculator.WebUI/Views/Users/Register.Mobile.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MathСalculator.WebUI.Models.UsersRegister
 
 @{
-    
+    ViewBag.Title = "Регистрация";
     Layout = "~/Views/Shared/_LayoutMobile.cshtml";
 }
 
@@ -15,7 +15,7 @@
 <div class="container">
     <div class="row  pad-top">
 
-        <div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3 col-xs-10 col-xs-offset-1">
+       
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <center> <strong> Регистрация </strong> </center>
@@ -63,11 +63,11 @@
                             
                         </div>
                         <span class="help-block">
-                            Загрузить картинку а аватарку
+                            Загрузить картинку на аватарку
                         </span>
                         <br />
                         <center>
-                            <button type="submit" class="btn btn-primary btn-lg "><span class="glyphicon glyphicon-log-in"></span> Зарегистрироватьcя</button>
+                            <button type="submit" class="btn btn-primary btn-lg "><span class="glyphicon glyphicon-log-in"></span> Продолжить</button>
                            
                         </center>
                         <hr />
@@ -82,7 +82,7 @@
 
 
     </div>
-    </div>
+
 
 
 <script src="~/Scripts/imageScript.js"></script>
