--- a/MathСalculator.WebUI/Views/Methods/Index.Mobile.cshtml
+++ b/MathСalculator.WebUI/Views/Methods/Index.Mobile.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Главная";
     Layout = "~/Views/Shared/_LayoutMobile.cshtml";
 }
 
@@ -32,14 +32,35 @@
     </div><!--/.col-xs-6.col-lg-4-->
 </div>
 
+<hr />
+<center>
+    @if (!User.Identity.IsAuthenticated)
+    {
+        <a href="@Url.Action("Login", "Users")" class="btn btn-primary " role="button">Войти</a>
+        <a href="@Url.Action("Register", "Users")" class="btn btn-primary " role="button">Регистрация</a>
+        <hr />
+    }
+    else
+    {
+        <a href="@Url.Action("Login", "Users")" class="btn btn-primary " role="button">Изменить пароль</a>
+        <a href="@Url.Action("Logout", "Users")" class="btn btn-primary " role="button">Выйти</a>
+        <hr />
+    }
+</center>
+
+
+
+
 
 
 
 <style>
     div.jumbotron {
-        width:100%;
-        height:100%;
-        background-image: url(http://hq-wallpapers.ru/wallpapers/3/hq-wallpapers_ru_funny_13844_1920x1200.jpg);
-        background-size: 100%;/* Современные браузеры */
+
+        background-image: url('../../Content/hq-wallpapers_ru_funny_13844_1920x1200.jpg');
+        -moz-background-size: 100%; /* Firefox 3.6+ */
+        -webkit-background-size: 100%; /* Safari 3.1+ и Chrome 4.0+ */
+        -o-background-size: 100%; /* Opera 9.6+ */
+        background-size: 100%; /* Современные браузеры */
     }
 </style>
