--- a/MathСalculator.WebUI/Views/Methods/Newton.cshtml
+++ b/MathСalculator.WebUI/Views/Methods/Newton.cshtml
@@ -1,6 +1,6 @@
 ﻿@model MathСalculator.WebUI.Models.SimpleIterationModel
 @{
-    ViewBag.Title = "Newton";
+    ViewBag.Title = "Метод Ньютона";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -126,7 +126,7 @@
                 <br />
                 @Html.Label("Введите eps")
                 <br />
-                @Html.TextBoxFor(x => x.Epsilon, new { Value = 0.000001 })
+                @Html.TextBoxFor(x => x.Epsilon)
                 <br />
                 @Html.Label("Введите начальное приближение х0")
                 <br />
