--- a/MathСalculator.WebUI/Views/Shared/_LayoutMobile.cshtml
+++ b/MathСalculator.WebUI/Views/Shared/_LayoutMobile.cshtml
@@ -2,6 +2,8 @@
 
 <html>
 <head>
+    <title></title>
+
     <meta name="viewport" content="width=device-width" />
     <meta name="viewport" content="width=device-width" />
     <link href="~/Content/bootstrap.css" rel="stylesheet" />
@@ -18,6 +20,7 @@
     <script src="~/Scripts/ie-emulation-modes-warning.js"></script>
     <link href="~/Content/StyleSheet1.css" rel="stylesheet" />
     <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.js")" type="text/javascript"></script>
+    
 
 </head>
 <body>
@@ -36,26 +39,64 @@
                 {
                     <a class="navbar-brand" href="#"><b>@User.Identity.Name</b></a>
                    
+
+                   
                 }
             </div>
             <div id="navbar" class="collapse navbar-collapse">
-                <center>
+               
+                
                     <ul class="nav navbar-nav">
-                        @if (!User.Identity.IsAuthenticated)
-                        {
-                            <a href="@Url.Action("Login", "Users")" class="btn btn-primary " role="button">Войти</a>
-                            <a href="@Url.Action("Register", "Users")" class="btn btn-primary " role="button">Регистрация</a>
-                        }
-                        else
-                        {
-                            <a href="@Url.Action("Login", "Users")" class="btn btn-primary " role="button">Изменить пароль</a>
-                            <a href="@Url.Action("Logout", "Users")" class="btn btn-primary " role="button">Выйти</a>
-                        }
-                        <li class="dropdown dropdown-large">
+                       <li class="dropdown1">
+                            <a href="#" class="dropdown-toggle mytitle" data-toggle="dropdown">Методы решения СЛАУ <span class="caret"></span></a>
+                            <ul class="dropdown-menu" role="menu">
+                                <li><a href="@Url.Action("Gaus", "Methods")">Метод Гаусса</a></li>
+                                <li><a href="#">LU - разложение</a></li>
+                                <li><a href="#">Метод квадратного корня</a></li>
+                                
+                            </ul>
+                        </li>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle mytitle" data-toggle="dropdown">Итерационные методы<span class="caret"></span></a>
+                            <ul class="dropdown-menu" role="menu">
+                                <li><a href="@Url.Action("SimpleIteration", "Methods")">Метод простой итерации</a></li>
+                                <li><a href="@Url.Action("Chord", "Methods")">Метод хорд</a></li>
+                                <li><a href="@Url.Action("Newton", "Methods")">Метод Ньютона</a></li>
+                                <li><a href="@Url.Action("Secants", "Methods")">Метод секущих</a></li>
+                            </ul>
+                        </li>
+
+                  
+                    </ul>
+                    @*<center><div class="mytitle">Методы решения СЛАУ</div> </center>
+                    <a class="myli" href="@Url.Action("Gaus", "Methods")"> 1.Метод Гаусса</a>
+                    <br/>
+                    <a class="myli" href="#"> 2.LU - разложение</a>
+                    <br />
+                    <a class="myli" href="#"> 3.Метод квадратного корня</a>
+                    <p class="divider"></p>
+                    <center><div class="mytitle">Итерационные методы</div> </center>
+                    <a class="myli" href="@Url.Action("SimpleIteration", "Methods")"> 1.Метод простой итерации</a><br />
+                    <a class="myli" href="@Url.Action("Chord", "Methods")"> 2.Метод хорд</a><br />
+                    <a class="myli" href="@Url.Action("Newton", "Methods")"> 3.Метод Ньютона</a><br />
+                    <a class="myli" href="@Url.Action("Secants", "Methods")"> 4.Метод секущих</a><br />*@
+                    @*
+                    <p><a href="@Url.Action("Gaus", "Methods")">Метод Гаусса</a></p>
+                    <p><a href="#">LU - разложение</a></p>
+                    <p><a href="#">Метод квадратного корня</a></p>
+                    <p class="divider"></p>
+                    <p class="dropdown-header">Итерационные методы</p>
+                    <p><a href="@Url.Action("SimpleIteration", "Methods")">Метод простой итерации</a></p>
+                    <p><a href="@Url.Action("Chord", "Methods")">Метод хорд</a></p>
+                    <p><a href="@Url.Action("Newton", "Methods")">Метод Ньютона</a></p>
+                    <p><a href="@Url.Action("Secants", "Methods")">Метод секущих</a></p>*@
+
+
+                    @*@*<li class="dropdown dropdown-large">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown"> Методы<b class="caret"></b></a>
 
-                            <ul class="dropdown-menu dropdown-menu-large row">
-                                <li class="col-sm-3">
+                            <ul class="dropdown-menu dropdown-menu-large row">*@
+                    @*<li class="col-sm-3">
                                     <ul>
                                         <li class="dropdown-header">Методы решения СЛАУ</li>
                                         <li><a href="@Url.Action("Gaus", "Methods")">Метод Гаусса</a></li>
@@ -68,8 +109,8 @@
                                         <li><a href="@Url.Action("Newton", "Methods")">Метод Ньютона</a></li>
                                         <li><a href="@Url.Action("Secants", "Methods")">Метод секущих</a></li>
 
-                                    </ul>
-                                </li>
+                                    </ul>*@
+                    @*</li>
                                 <li class="col-sm-3">
                                     <ul>
                                         <li class="dropdown-header">Численное интегрирование</li>
@@ -110,12 +151,12 @@
                                         <li><a href="#">Inverted navbar</a></li>
                                     </ul>
                                 </li>
-                            </ul>
+                            </ul>*@
 
-                        </li>
+                    @*</li>*@
 
-                    </ul>
-                </center>
+              
+                
             </div><!-- /.nav-collapse -->
 
         </div><!-- /.container -->
@@ -124,13 +165,16 @@
     <div class="container">
 
         @RenderBody()
-       
+   
+        
     </div><!--/.container-->
-    <footer class="footer">
-        <div class="container">
-            <p class="text-muted"> <p class="text-muted">Данный сайт находится в разработке.Все пожелания Вы можете мне присылать на <a href="mailto:#">mik.borischewskij@gmail.com</a></p></p>
-        </div>
-    </footer>
+<footer class="footer">
+    <div class="container">
+        <p class="text-muted">Данный сайт находится в разработке.Все пожелания Вы можете мне присылать на <a href="mailto:#">mik.borischewskij@gmail.com</a></p>
+    </div>
+
+
+</footer>
 </body>
 </html>
 <script>
@@ -138,3 +182,16 @@
     if ($(document).height() <= $(window).height())
         $("footer.footer").addClass("navbar-fixed-bottom");
 </script>
+
+
+@*<style>
+    color: #428bca; font-size: 18px;
+</style>*@
+<style>
+    .mytitle {
+        color: #428bca;
+        font-size: 18px;
+    }
+
+
+</style>
