--- a/MathСalculator.WebUI/Views/Shared/_Layout.cshtml
+++ b/MathСalculator.WebUI/Views/Shared/_Layout.cshtml
@@ -10,6 +10,11 @@
     <script src="~/Scripts/simIter.js"></script>
     <link href="~/Content/simIter.css" rel="stylesheet" />
     <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+    @*<script>
+    if ($(document).height() <= $(window).height())
+        $("footer.footer").addClass("navbar-fixed-bottom");
+
+    </script>*@
 
     <link href="~/Content/bootstrap-theme.min.css" rel="stylesheet" />
     <link href="~/Content/offcanvas.css" rel="stylesheet" />
@@ -124,10 +129,3 @@
     </footer>
 </body>
 </html>
-<script>
-    if ($(document).height() <= $(window).height())
-        $("footer.footer").addClass("navbar-fixed-bottom");
-
-</script>
-
-
