--- a/MathСalculator.WebUI/Views/Methods/Chord.Mobile.cshtml
+++ b/MathСalculator.WebUI/Views/Methods/Chord.Mobile.cshtml
@@ -51,16 +51,16 @@
                 <br />
                 @Html.Label("Введите eps")
                 <br />
-                @Html.TextBoxFor(x => x.Epsilon, new { Value = 0.000001 })
+                @Html.TextBoxFor(x => x.Epsilon, new { @placeholder = "0,000001" })
                 <br />
                 @Html.Label("Введите начальное приближение х0")
                 <br />
-                @Html.TextBoxFor(x => x.X0, new { Value = 1 })
-                <br/>
-                
+                @Html.TextBoxFor(x => x.X0)
+                <br />
+
                 @Html.Label("Введите начальное приближение х1")
                 <br />
-                @Html.TextBoxFor(x => x.X0, new { Value = 1 })
+                @Html.TextBoxFor(x => x.X1)
                 <br />
                 <br />
 
