--- a/MathСalculator.WebUI/Views/Methods/Newton.cshtml
+++ b/MathСalculator.WebUI/Views/Methods/Newton.cshtml
@@ -126,11 +126,11 @@
                 <br />
                 @Html.Label("Введите eps")
                 <br />
-                @Html.TextBoxFor(x => x.Epsilon)
+                @Html.TextBoxFor(x => x.Epsilon,new { @placeholder = "0,00001" })
                 <br />
                 @Html.Label("Введите начальное приближение х0")
                 <br />
-                @Html.TextBoxFor(x => x.X0, new { Value = 1 })
+                @Html.TextBoxFor(x => x.X0, new { @placeholder = "0" })
                 <br />
                 <br />
 
@@ -147,6 +147,8 @@
         @if (User.Identity.IsAuthenticated)
         {
             <a href="E:\DocXExample.docx">Скачать решение в .doc</a>
+    @*<a href="@ViewBag.Adress">Проверить решение</a>*@
+
         }
     </div>
 </div>
