--- a/MathСalculator.WebUI/Views/Methods/Chord.cshtml
+++ b/MathСalculator.WebUI/Views/Methods/Chord.cshtml
@@ -123,7 +123,10 @@
                 <p class="texterror">
                     @Html.ValidationSummary(true, "Вы что-то сделали не так. Возможные проблемы: ")
                 </p>
-
+                 @Html.Label("Введите уравнение")
+  <br />
+                                @Html.TextBoxFor(x => x.Equation, new { @placeholder= "f(x) = 0" })
+                                <br />
                 @Html.LabelFor(x => x.Fuctions)
                 <br />
 
@@ -156,8 +159,8 @@
 
         @if (User.Identity.IsAuthenticated)
         {
-            <a href="E:\DocXExample.docx">Скачать решение в .doc</a>
-    @*<a href="@ViewBag.Adress">Проверить решение</a>*@
+            @Html.ActionLink("Скачать решение в .doc", "GetFile", new { path = "Chord.doc" })
+    <a style="margin-left: 20px;" href="@ViewBag.Adress" target="_blank">Проверить решение</a>
         }
     </div>
 </div>
