--- a/MathСalculator.WebUI/Views/Methods/Newton.Mobile.cshtml
+++ b/MathСalculator.WebUI/Views/Methods/Newton.Mobile.cshtml
@@ -52,10 +52,13 @@
         <center>
             @using (Html.BeginForm("Newton", "Methods", FormMethod.Post, new { @class = "form-horizontal" }))
             {
-                <p class="texterror">
+                   <p class="texterror">
                     @Html.ValidationSummary(true, "Вы что-то сделали не так. Возможные проблемы: ")
-                </p>
-
+            </p>
+                    @Html.Label("Введите уравнение")
+  <br />
+                                @Html.TextBoxFor(x => x.equation, new { @placeholder= "f(x) = 0" })
+                                <br />
                 @Html.LabelFor(x => x.Fuctions)
                 <br />
 
@@ -63,7 +66,7 @@
                 <br />
                 @Html.Label("Введите eps")
                 <br />
-                @Html.TextBoxFor(x => x.Epsilon, new { @placeholder = "0,00001" })
+                @Html.TextBoxFor(x => x.Epsilon,new { @placeholder = "0,00001" })
                 <br />
                 @Html.Label("Введите начальное приближение х0")
                 <br />
@@ -83,7 +86,8 @@
 
         @if (User.Identity.IsAuthenticated)
         {
-            <a href="E:\DocXExample.docx">Скачать решение в .doc</a>
+            @Html.ActionLink("Скачать решение в .doc", "GetFile", new { path = "Newton.doc" })
+    <a style="margin-left: 20px;" href="@ViewBag.Adress" target="_blank">Проверить решение</a>
         }
     </div>
 </div>
