--- a/MathСalculator.WebUI/Views/Methods/Newton.cshtml
+++ b/MathСalculator.WebUI/Views/Methods/Newton.cshtml
@@ -118,7 +118,10 @@
                 <p class="texterror">
                     @Html.ValidationSummary(true, "Вы что-то сделали не так. Возможные проблемы: ")
             </p>
-
+                    @Html.Label("Введите уравнение")
+  <br />
+                                @Html.TextBoxFor(x => x.equation, new { @placeholder= "f(x) = 0" })
+                                <br />
                 @Html.LabelFor(x => x.Fuctions)
                 <br />
 
@@ -146,8 +149,8 @@
 
         @if (User.Identity.IsAuthenticated)
         {
-            <a href="E:\DocXExample.docx">Скачать решение в .doc</a>
-    @*<a href="@ViewBag.Adress">Проверить решение</a>*@
+             @Html.ActionLink("Скачать решение в .doc", "GetFile", new { path = "Newton.doc" })
+    <a style="margin-left: 20px;" href="@ViewBag.Adress" target="_blank">Проверить решение</a>
 
         }
     </div>
