--- a/MathСalculator.WebUI/Views/Methods/Secants.cshtml
+++ b/MathСalculator.WebUI/Views/Methods/Secants.cshtml
@@ -175,7 +175,7 @@
 
         @if (User.Identity.IsAuthenticated)
         {
-             @Html.ActionLink("Скачать решение в .doc", "GetFile", new { path = "Secants.doc" })
+            <span class="glyphicon glyphicon-download-alt"></span>  @Html.ActionLink("Скачать решение в .doc", "GetFile", new { path = "Secants.doc" })
     <a style="margin-left: 20px;" href="@ViewBag.Adress" target="_blank">Проверить решение</a>
         }
     </div>
