--- a/MathСalculator.WebUI/Views/Shared/_Layout.cshtml
+++ b/MathСalculator.WebUI/Views/Shared/_Layout.cshtml
@@ -2,8 +2,9 @@
 
 <html>
 <head>
-   
-    <meta name="viewport" content="width=device-width" />
+
+    <meta name="viewport" content="width=device-width"/>
+    <meta name="google-site-verification" content="CRduMzF20yQo77LFEDcSqhKXzqvfVfxT7SzDLBvKvS4" />
     <link href="~/Content/bootstrap.css" rel="stylesheet" />
     <script src="~/Scripts/jquery-1.10.2.min.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
@@ -22,7 +23,7 @@
     <script src="~/Scripts/npm.js"></script>
     <script src="~/Scripts/ie-emulation-modes-warning.js"></script>
     <link href="~/Content/StyleSheet1.css" rel="stylesheet" />
-    <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.js")" type="text/javascript"></script>
+
    
       <title>@ViewBag.Title</title>
 </head>
@@ -36,7 +37,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                
+             
                 <a class="navbar-brand" href="@Url.Action("Index", "Methods")">MathСalculator
                 </a>
             </div>
