--- a/MathСalculator.WebUI/Views/Shared/_LayoutMobile.cshtml
+++ b/MathСalculator.WebUI/Views/Shared/_LayoutMobile.cshtml
@@ -5,7 +5,8 @@
     <title></title>
 
     <meta name="viewport" content="width=device-width" />
-    <meta name="viewport" content="width=device-width" />
+    <meta name="viewport" content="width=device-width"/>
+    <meta name="google-site-verification" content="CRduMzF20yQo77LFEDcSqhKXzqvfVfxT7SzDLBvKvS4" />
     <link href="~/Content/bootstrap.css" rel="stylesheet" />
     <script src="~/Scripts/jquery-1.10.2.min.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
@@ -19,7 +20,7 @@
     <script src="~/Scripts/npm.js"></script>
     <script src="~/Scripts/ie-emulation-modes-warning.js"></script>
     <link href="~/Content/StyleSheet1.css" rel="stylesheet" />
-    <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.js")" type="text/javascript"></script>
+   
     
 
 </head>
