--- a/MathСalculator.WebUI/Views/Users/Account.cshtml
+++ b/MathСalculator.WebUI/Views/Users/Account.cshtml
@@ -6,13 +6,16 @@
 @if (ViewBag.IsLogIn == true)
 {
     <ul class="nav navbar-nav navbar-right">
-        <li><img width="38" height="38" class="img-circle " style=" top: 5px; position:relative" src="@Url.Action("GetImage", "Users", new { userId = Model.Id })"></li>
+        @if (Model.ImageData != null)
+        {
+            <li><img width="38" height="38" class="img-circle " style="top: 5px; position: relative" src="@Url.Action("GetImage", "Users", new {userId = Model.Id})"></li>
+        }
         <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">@Model.Login <span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
                 @foreach (var i in Model.Links)
                 {
-                    <li role="presentation"><a role="menuitem" tabindex="-1" href="@Url.Action(i.Url, i.NameController)">@i.Name</a></li>
+                    <li role="presentation"><a role="menuitem" tabindex="-1" href="@Url.Action(i.Url, i.NameController)"><span class="@i.NameImage"></span> @i.Name</a></li>
                 }
             </ul>
         </li>
