--- a/MathСalculator.WebUI/Views/Users/ChangeUsersPassword.cshtml
+++ b/MathСalculator.WebUI/Views/Users/ChangeUsersPassword.cshtml
@@ -19,8 +19,11 @@
                                 Изменить пароль
                             </h3>
                         </div>
-                        <div class="panel-body">
+                        <p class="text-danger" style="color:#ff0000">
                             @Html.ValidationSummary(true)
+                        </p>
+                        <div class="panel-body">
+                            
                             <div class="row">
                                 <div class="col-xs-6 col-sm-6 col-md-6 separator social-login-box">
                                     <br>
@@ -29,32 +32,38 @@
                                 <div style="margin-top: 30px;" class="col-xs-6 col-sm-6 col-md-6 login-box">
 
                                     <div class="form-group">
-                                        @Html.ValidationMessageFor(model => model.OldPassword)
-                                        <div class="input-group">
-                                            <div class="input-group-addon"><span class="glyphicon glyphicon-lock"></span></div>
-                                            @Html.PasswordFor(model => model.OldPassword, new {@class = "form-control", @placeholder = "Текущий пароль"})
+                                        <p class="text-danger">
+                                            @Html.ValidationMessageFor(model => model.OldPassword)
+                                            </p>
+                                            <div class="input-group">
+                                                <div class="input-group-addon"><span class="glyphicon glyphicon-lock"></span></div>
+                                                @Html.PasswordFor(model => model.OldPassword, new { @class = "form-control", @placeholder = "Текущий пароль" })
 
-                                        </div>
-                                    </div>
+                                            </div>
+</div>
                                     <div class="form-group">
-                                        @Html.ValidationMessageFor(model => model.Password)
-                                        <div class="input-group">
-                                            <div class="input-group-addon"><span class="glyphicon glyphicon-log-in"></span></div>
-                                            @Html.PasswordFor(model => model.Password, new {@class = "form-control", @placeholder = "Новый пароль"})
+                                        <p class="text-danger">
+                                            @Html.ValidationMessageFor(model => model.Password)
+                                            </p>
+                                            <div class="input-group">
+                                                <div class="input-group-addon"><span class="glyphicon glyphicon-log-in"></span></div>
+                                                @Html.PasswordFor(model => model.Password, new { @class = "form-control", @placeholder = "Новый пароль" })
 
-                                        </div>
-                                    </div>
+                                            </div>
+</div>
                                     <div class="form-group">
-                                        @Html.ValidationMessageFor(model => model.ConfirmPassword)
-                                        <div class="input-group">
-                                            <div class="input-group-addon"><span class="glyphicon glyphicon-log-in"></span></div>
-                                            @Html.PasswordFor(model => model.ConfirmPassword, new {@class = "form-control", @placeholder = "Повторите пароль"})
+                                        <p class="text-danger">
+                                            @Html.ValidationMessageFor(model => model.ConfirmPassword)
+                                            </p>
+                                            <div class="input-group">
+                                                <div class="input-group-addon"><span class="glyphicon glyphicon-log-in"></span></div>
+                                                @Html.PasswordFor(model => model.ConfirmPassword, new { @class = "form-control", @placeholder = "Повторите пароль" })
 
-                                        </div>
-                                    </div>
+                                            </div>
+</div>
                                 </div>
                             </div>
-                        </div>
+</div>
                         <div class="panel-footer">
                             <div class="row">
                                 <div class="col-xs-6 col-sm-6 col-md-6"></div>
