--- a/MathСalculator.WebUI/Views/Methods/Error404.cshtml
+++ b/MathСalculator.WebUI/Views/Methods/Error404.cshtml
@@ -1,12 +1,11 @@
 ﻿
 @{
     ViewBag.Title = "404";
-    //Layout = null;
+   //Layout = null;
 }
 
 <link href="~/Content/Error404.css" rel="stylesheet" />
-        <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans">
-
+ <link href="~/Content/style404.css" rel="stylesheet" />
         <div id="content">
             <div id="title">
                 <p class="rif">Ошибка<br />404</p>
@@ -34,9 +33,7 @@
             </div>
         </div>
 
-
-<script src='http://codepen.io/assets/libs/fullpage/jquery.js'></script>
-<script src='http://cdn.jsdelivr.net/velocity/1.1.0/velocity.min.js'></script>
-
+<script src="~/Scripts/jquery.js"></script>
+<script src="~/Scripts/velocity.min.js"></script>
 
 <script src="~/Scripts/error404.js"></script>
